[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/train.png" type="Texture" id=1]
[ext_resource path="res://TrainBody.gd" type="Script" id=2]
[ext_resource path="res://sprites/smoke.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.46023

[sub_resource type="Animation" id=2]
resource_name = "Puff"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TrainSprite/SmokeSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 2, 1 ]
}

[node name="Train" type="Node2D"]

[node name="TrainBody" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="TrainSprite" type="Sprite" parent="TrainBody"]
z_index = 1
texture = ExtResource( 1 )

[node name="SmokeSprite" type="Sprite" parent="TrainBody/TrainSprite"]
modulate = Color( 1, 1, 1, 0.737255 )
position = Vector2( 12, 0 )
z_index = 1
texture = ExtResource( 3 )
vframes = 3
frame = 1

[node name="Camera" type="Camera2D" parent="TrainBody"]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="TrainAnimationPlayer" type="AnimationPlayer" parent="TrainBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrainBody"]
shape = SubResource( 1 )

[node name="SmokeAnimationPlayer" type="AnimationPlayer" parent="TrainBody"]
anims/Puff = SubResource( 2 )
